# agent-coding-assistant

./: .env.example  .gitignore  CONTEXT.md  PRD.md  README.md  pyproject.toml  run.sh
docs/: ISSUES.md
docs/adr/: 0001-local-feedback-loops.md
src/agent_assistant/: __init__.py  cli.py  config.py
src/agent_assistant/agents/: __init__.py  architect.py  coder.py  pm.py  reviewer.py  tester.py
src/agent_assistant/llm/: client.py
src/agent_assistant/orchestrator/: intent.py
src/agent_assistant/pipeline/: __init__.py  agent.py  artifact.py  context.py  intervention.py  pipeline.py  session.py  stubs.py  validation.py
src/agent_assistant/project_context/: __init__.py  scanner.py  summarizer.py
src/agent_assistant/tools/: __init__.py  base.py  file_tools.py  permissions.py
tests/: test_architect_agent.py  test_cli.py  test_coder_agent.py  test_config.py  test_feedback_loop.py  test_intent.py  test_intervention.py  test_llm_client.py  test_pipeline.py  test_pm_agent.py  test_project_context.py  test_reviewer_agent.py  test_tester_agent.py  test_tools.py  test_validation.py
