[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-coding-assistant"
version = "0.1.0"
description = "A multi-agent CLI programming assistant that simulates a development team for individual developers"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[project.scripts]
agent-assist = "agent_assistant.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_assistant"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
